--- a/InvenTree/templates/base.html
+++ b/InvenTree/templates/base.html
@@ -140,6 +140,7 @@
 <script type='text/javascript' src="{% static 'script/moment.js' %}"></script>
 <script type='text/javascript' src="{% static 'script/chart.min.js' %}"></script>
 <script type='text/javascript' src="{% static 'script/clipboard.min.js' %}"></script>
+<script type='text/javascript' src="{% static 'script/randomColor.min.js' %}"></script>
 
 <!-- general InvenTree -->
 <script type='text/javascript' src="{% static 'script/inventree/inventree.js' %}"></script>
