Expand possibilities for variant conversion
- Ref get_conversion_options

--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -102,6 +102,11 @@
         </div>
 
         <div class='info-messages'>
+            {% if part.virtual %}
+            <div class='alert alert-warning alert-block'>
+                {% trans "This is a virtual part" %}
+            </div>
+            {% endif %}
             {% if part.variant_of %}
             <div class='alert alert-info alert-block'>
                 {% object_link 'part-variants' part.variant_of.id part.variant_of.full_name as link %}
