--- a/InvenTree/templates/InvenTree/settings/currencies.html
+++ b/InvenTree/templates/InvenTree/settings/currencies.html
@@ -13,40 +13,43 @@
 {% block settings %}
 
 <table class='table table-striped table-condensed'>
-    {% include "InvenTree/settings/header.html" %}
     <tbody>
-        {% include "InvenTree/settings/setting.html" with key="INVENTREE_DEFAULT_CURRENCY" icon="fa-dollar-sign" %}
-        {% include "InvenTree/settings/setting.html" with key="CUSTOM_EXCHANGE_RATES" icon="fa-edit" %}
+        <tr>
+            <th>{% trans "Base Currency" %}</th>
+            <th>{{ base_currency }}</th>
+        </tr>
+        <tr>
+            <th colspan='2'>{% trans "Exchange Rates" %}</th>
+        </tr>
+        {% for rate in rates %}
+        <tr>
+            <td>{{ rate.currency }}</td>
+            <td>{{ rate.value }}</td>
+        </tr>
+        {% endfor %}
+        <tr>
+            <th>
+                {% trans "Last Update" %}
+            </th>
+            <td>
+                {% if rates_updated %}
+                {{ rates_updated }}
+                {% else %}
+                <i>{% trans "Never" %}</i>
+                {% endif %}
+                <form action='{% url "settings-currencies-refresh" %}' method='post'>
+                    <div id='refresh-rates-form'>
+                        {% csrf_token %}
+                        <button type='submit' id='update-rates' class='btn btn-default float-right'>{% trans "Update Now" %}</button>
+                    </div>
+                </form>
+            </td>
+        </tr>
     </tbody>
 </table>
-
-<div class='row'>
-    <div class='col-sm-6'>
-        <h4>{% blocktrans with cur=default_currency %}Exchange Rates - Convert to {{cur}}{% endblocktrans %}</h4>
-    </div>
-</div>
-
-<form action="{% url 'settings-currencies' %}" method="post">
-    <div id='exchange_rate_form'>
-    {% csrf_token %}
-    {% load crispy_forms_tags %}
-    {% crispy form %}
-    {% if custom_rates is False %}
-        <button type="submit" class='btn btn-primary'>{% trans "Refresh Exchange Rates" %}</button>
-    {% else %}
-        <button type="submit" class='btn btn-primary'>{% trans "Update Exchange Rates" %}</button>
-    {% endif %}
-    </div>
-</form>
 
 {% endblock %}
 
 {% block js_ready %}
 {{ block.super }}
-
-{% if api_rates_success is False %}
-    var alert_msg = {% blocktrans %}"Failed to refresh exchange rates" {% endblocktrans %};
-    showAlertOrCache("alert-danger", alert_msg, null, 5000);
-{% endif %}
-
 {% endblock %}
