Fix part page heading

--- a/InvenTree/part/templates/part/category.html
+++ b/InvenTree/part/templates/part/category.html
@@ -138,7 +138,7 @@
     <div class='panel-heading'>
         <h4>
             {% block heading %}
-            {% trans "Part Categories" %}
+            {% trans "Parts" %}
             {% endblock %}
         </h4>
     </div>
