--- a/InvenTree/part/templates/part/part_pricing.html
+++ b/InvenTree/part/templates/part/part_pricing.html
@@ -1,8 +1,9 @@
 {% extends "modal_form.html" %}
 
-{% load i18n %}
+{% load i18n inventree_extras %}
 
 {% block pre_form_content %}
+{% settings_value "INVENTREE_DEFAULT_CURRENCY" as currency %}
 <table class='table table-striped table-condensed table-price-two'>
     <tr>
         <td><b>{% trans 'Part' %}</b></td>
