--- a/InvenTree/part/templates/part/part_pricing.html
+++ b/InvenTree/part/templates/part/part_pricing.html
@@ -3,7 +3,7 @@
 {% load i18n inventree_extras %}
 
 {% block pre_form_content %}
-{% settings_value "INVENTREE_DEFAULT_CURRENCY" as currency %}
+{% default_currency as currency %}
 <table class='table table-striped table-condensed table-price-two'>
     <tr>
         <td><b>{% trans 'Part' %}</b></td>
