--- a/InvenTree/part/templates/part/navbar.html
+++ b/InvenTree/part/templates/part/navbar.html
@@ -95,6 +95,12 @@
     </li>
     {% endif %}
     {% if part.salable and roles.sales_order.view %}
+    <li class='list-group-item {% if tab == "internal-prices" %}active{% endif %}' title='{% trans "Internal Price Information" %}'>
+        <a href='{% url "part-internal-prices" part.id %}'>
+            <span class='menu-tab-icon fas fa-dollar-sign' style='width: 20px;'></span>
+            {% trans "Internal Price" %}
+        </a>
+    </li>
     <li class='list-group-item {% if tab == "sales-prices" %}active{% endif %}' title='{% trans "Sales Price Information" %}'>
         <a href='{% url "part-sale-prices" part.id %}'>
             <span class='menu-tab-icon fas fa-dollar-sign' style='width: 20px;'></span>
