reusable js function

--- a/InvenTree/stock/templates/stock/item.html
+++ b/InvenTree/stock/templates/stock/item.html
@@ -51,7 +51,7 @@
     }); 
 
 
-    loadStockTrackingTable($("#track-table"), {
+    loadTrackingTable($("#track-table"), {
         params: {
             ordering: '-date',
             item: {{ item.pk }},
