--- a/InvenTree/templates/InvenTree/settings/part.html
+++ b/InvenTree/templates/InvenTree/settings/part.html
@@ -138,7 +138,7 @@
     });
 
     $("#import-part").click(function() {
-        launchModalForm("{% url 'api-part-import' %}", {});
+        launchModalForm("{% url 'api-part-import' %}?reset", {});
     });
 
 {% endblock %}
