--- a/InvenTree/part/templates/part/part_pricing.html
+++ b/InvenTree/part/templates/part/part_pricing.html
@@ -74,6 +74,20 @@
     </table>
 {% endif %}
 
+{% if total_internal_part_price %}
+    <h4>{% trans 'Internal Price' %}</h4>
+    <table class='table table-striped table-condensed table-price-two'>
+        <tr>
+            <td><b>{% trans 'Unit Cost' %}</b></td>
+            <td>{% include "price.html" with price=unit_internal_part_price %}</td>
+        </tr>
+        <tr>
+            <td><b>{% trans 'Total Cost' %}</b></td>
+            <td>{% include "price.html" with price=total_internal_part_price %}</td>
+        </tr>
+    </table>
+{% endif %}
+
 {% if total_part_price %}
     <h4>{% trans 'Sale Price' %}</h4>
     <table class='table table-striped table-condensed table-price-two'>
