fixing wrong page title

--- a/InvenTree/part/templates/part/internal_prices.html
+++ b/InvenTree/part/templates/part/internal_prices.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block heading %}
-{% trans "Sell Price Information" %}
+{% trans "Internal Price Information" %}
 {% endblock %}
 
 {% block details %}
