--- a/InvenTree/templates/InvenTree/settings/part.html
+++ b/InvenTree/templates/InvenTree/settings/part.html
@@ -34,6 +34,9 @@
         {% include "InvenTree/settings/setting.html" with key="PART_COPY_PARAMETERS" %}
         {% include "InvenTree/settings/setting.html" with key="PART_COPY_TESTS" %}
         {% include "InvenTree/settings/setting.html" with key="PART_CATEGORY_PARAMETERS" %}
+        <tr><td colspan='5'></td></tr>
+        {% include "InvenTree/settings/setting.html" with key="PART_INTERNAL_PRICE" %}
+        {% include "InvenTree/settings/setting.html" with key="PART_BOM_USE_INTERNAL_PRICE" %}
     </tbody>
 </table>
 
