--- a/InvenTree/part/templates/part/part_pricing.html
+++ b/InvenTree/part/templates/part/part_pricing.html
@@ -3,7 +3,10 @@
 {% load i18n inventree_extras %}
 
 {% block pre_form_content %}
+
 {% default_currency as currency %}
+{% settings_value "PART_INTERNAL_PRICE" as show_internal_price %}
+
 <table class='table table-striped table-condensed table-price-two'>
     <tr>
         <td><b>{% trans 'Part' %}</b></td>
@@ -74,6 +77,7 @@
     </table>
 {% endif %}
 
+{% if show_internal_price and roles.sales_order.view %}
 {% if total_internal_part_price %}
     <h4>{% trans 'Internal Price' %}</h4>
     <table class='table table-striped table-condensed table-price-two'>
@@ -86,6 +90,7 @@
             <td>{% include "price.html" with price=total_internal_part_price %}</td>
         </tr>
     </table>
+{% endif %}
 {% endif %}
 
 {% if total_part_price %}
