missed a translation there

--- a/InvenTree/order/templates/order/purchase_order_detail.html
+++ b/InvenTree/order/templates/order/purchase_order_detail.html
@@ -139,7 +139,7 @@ $("#po-table").inventreeTable({
                 }
             },
             footerFormatter:  function() {
-                return 'Total'
+                return '{% trans "Total" %}'
             }
         },
         {
