Fixes after rebase

--- a/InvenTree/part/templates/part/allocation.html
+++ b/InvenTree/part/templates/part/allocation.html
@@ -13,9 +13,11 @@
 
 {% block details %}
 
-<h4>{% trans "Part Stock Allocations" %}</h4>
+<h4>{% trans "Build Order Allocations" %}</h4>
 
 <table class='table table-striped table-condensed' id='build-order-table'></table>
+
+<h4>{% trans "Sales  Order Allocations" %}</h4>
 
 <table class='table table-striped table-condensed' id='sales-order-table'></table>
 
