also show prices of the value 0

--- a/InvenTree/order/templates/order/order_wizard/select_parts.html
+++ b/InvenTree/order/templates/order/order_wizard/select_parts.html
@@ -54,7 +54,7 @@
                             <option value="{{ supplier.id }}"{% if part.order_supplier == supplier.id %} selected="selected"{% endif %}>
                                 {% if show_price %}
                                     {% call_method supplier 'get_price' part.order_quantity as price %}
-                                    {% if price %}{% include "price.html" with price=price %}{% else %}{% trans 'No price' %}{% endif %} - 
+                                    {% if price != None %}{% include "price.html" with price=price %}{% else %}{% trans 'No price' %}{% endif %} - 
                                 {% endif %}
                                 {{ supplier }}
                             </option>
