Use the part detail API for uploading a new image

--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -239,9 +239,10 @@
 
     enableDragAndDrop(
         '#part-thumb',
-        "{% url 'part-image-upload' part.id %}",
+        "{% url 'api-part-detail' part.id %}",
         {
             label: 'image',
+            method: 'PATCH',
             success: function(data, status, xhr) {
                 location.reload();
             }
