--- a/InvenTree/company/templates/company/company_base.html
+++ b/InvenTree/company/templates/company/company_base.html
@@ -139,9 +139,10 @@
 
     enableDragAndDrop(
         "#company-thumb",
-        "{% url 'company-image' company.id %}",
+        "{% url 'api-company-detail' company.id %}",
         {
             label: 'image',
+            method: 'PATCH',
             success: function(data, status, xhr) {
                 location.reload();
             }
