--- a/InvenTree/part/templates/part/navbar.html
+++ b/InvenTree/part/templates/part/navbar.html
@@ -70,13 +70,13 @@
         </a>
     </li>
     {% endif %}
-    {% if part.purchaseable and roles.purchase_order.view %}
-    <li class='list-group-item {% if tab == "order-prices" %}active{% endif %}' title='{% trans "Order Price Information" %}'>
-        <a href='{% url "part-order-prices" part.id %}'>
+    <li class='list-group-item {% if tab == "prices" %}active{% endif %}' title='{% trans "Pricing Information" %}'>
+        <a href='{% url "part-prices" part.id %}'>
             <span class='menu-tab-icon fas fa-dollar-sign sidebar-icon'></span>
-            {% trans "Order Price" %}
+            {% trans "Prices" %}
         </a>
     </li>
+    {% if part.purchaseable and roles.purchase_order.view %}
     <li class='list-group-item {% if tab == "manufacturers" %}active{% endif %}' title='{% trans "Manufacturers" %}'>
         <a href='{% url "part-manufacturers" part.id %}'>
             <span class='menu-tab-icon fas fa-industry sidebar-icon'></span>
