removing old views

--- a/InvenTree/part/templates/part/navbar.html
+++ b/InvenTree/part/templates/part/navbar.html
@@ -96,19 +96,7 @@
         </a>
     </li>
     {% endif %}
-    {% if show_internal_price and roles.sales_order.view %}
-    <li class='list-group-item {% if tab == "internal-prices" %}active{% endif %}' title='{% trans "Internal Price Information" %}'>
-        <a href='{% url "part-internal-prices" part.id %}'>
-            <span class='menu-tab-icon fas fa-dollar-sign' style='width: 20px;'></span>
-            {% trans "Internal Price" %}
-        </a>
-    </li>
-    <li class='list-group-item {% if tab == "sales-prices" %}active{% endif %}' title='{% trans "Sales Price Information" %}'>
-        <a href='{% url "part-sale-prices" part.id %}'>
-            <span class='menu-tab-icon fas fa-dollar-sign sidebar-icon'></span>
-            {% trans "Sale Price" %}
-        </a>
-    </li>
+    {% if roles.sales_order.view %}
     <li class='list-group-item {% if tab == "sales-orders" %}active{% endif %}' title='{% trans "Sales Orders" %}'>
         <a href='{% url "part-sales-orders" part.id %}'>
             <span class='menu-tab-icon fas fa-truck sidebar-icon'></span>
