--- a/InvenTree/part/templates/part/prices.html
+++ b/InvenTree/part/templates/part/prices.html
@@ -140,7 +140,6 @@
         </div>
     </div>
 
-
     <div class='panel panel-default panel-inventree'>
         <div class='panel-heading'>
             <h4>{% trans "Purchase Price" %}</h4>
@@ -183,6 +182,7 @@
 {% endif %}
 
 
+{% if part.has_bom and roles.sales_order.view %}
 <div class='panel panel-default panel-inventree'>
     <div class='panel-heading'>
         <h4>{% trans "BOM Cost" %}</h4>
@@ -204,6 +204,8 @@
         {% endif %}
     </div></div>
 </div>
+{% endif %}
+
 
 {% if part.salable and roles.sales_order.view %}
     <div class='panel panel-default panel-inventree'>
