Live update part image

--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -244,7 +244,14 @@
             label: 'image',
             method: 'PATCH',
             success: function(data, status, xhr) {
-                location.reload();
+
+                // If image / thumbnail data present, live update
+                if (data.image) {
+                    $('#part-image').attr('src', data.image);
+                } else {
+                    // Otherwise, reload the page
+                    location.reload();
+                }
             }
         }
     );
