Live update of Company image

--- a/InvenTree/company/templates/company/company_base.html
+++ b/InvenTree/company/templates/company/company_base.html
@@ -144,7 +144,12 @@
             label: 'image',
             method: 'PATCH',
             success: function(data, status, xhr) {
-                location.reload();
+
+                if (data.image) {
+                    $('#company-image').attr('src', data.image);
+                } else {
+                    location.reload();
+                }
             }
         }
     );
